Added media cards, form, and information

--- a/gamenight/gamerule.html
+++ b/gamenight/gamerule.html
@@ -7,7 +7,7 @@
     <title>Game Night</title>
     <meta
       name="description"
-      content="Game Night is about differnt games to play with friends and how to play"
+      content="This will give a breif description of a game and take you to a YouTube link to better understand"
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -27,30 +27,136 @@
       </header>
 
       <main>
-        <h1>How to Play</h1>
+        <h1>Game Night</h1>
+        <h2>How to Play</h2>
+        <div class="howtoplay">
         <div class="heroimage">
-          <img src="images/justagame.jpeg" alt="Just A Game" />
+          <img src="images/dice.webp" alt="Dice" />
         </div>
-
+<!--Kubb-->
         <div class="subject1-3">
-          <h2>Kubb - (Outdoor)</h2>
-          <p>Kubb rules description – (YouTube link)</p>
+          <div class="mediacard">
+            <img src="images/kubb.webp" alt="Kubb" class="cardimage" />
+            <img src="images/heart.webp" alt="Heart" class="heart" />
+            <div class="text">
+              <h2>Kubb - (Outdoor)</h2>
+              <p>
+                Kubb (pronounced 'Koob') is a fun game where two teams of 1-6
+                players try to knock-down the opponents kubbs in an attempt to
+                knock-over the king and win the game. You don't want to knock-over
+                 the king, however, before your opponents loses all their kubbs or 
+                 you lose the game. 
+              </p>
+              <div class="shop">
+              <p>
+                 <a href="https://www.amazon.com/Kubb-Yard-Game-Adults-Families/dp/B07GF53R59/ref=sr_1_10?crid=HO5S6DG0RLLI&keywords=kubb&qid=1639376886&sprefix=Kubb%2Caps%2C247&sr=8-10">You can buy this game for $34.99 on Amazon.</a>
+              </p>
+              </div>
+            </div>
+            <a
+              href="https://www.youtube.com/watch?v=ZisjpAlarhM"
+              target="blank"
+              class="ruleslink"
+            >
+              <p>YouTube Description</p>
+            </a>
+          </div>
         </div>
-
+<!--Tsuro-->
         <div class="subject2-3">
-          <h2>Tsro - (Card/Board)</h2>
-          <p>Tsro rules description – (YouTube link)</p>
+          <div class="mediacard">
+            <img src="images/tsuro.jpg" alt="Tusro" class="cardimage" />
+            <img src="images/heart.webp" alt="Heart" class="heart" />
+            <div class="text">
+              <h2>Tsuro - (Car/Board)</h2>
+              <p>
+                Tsuro (pronounced Suro) is a path building game in which you 
+                are trying to have your piece the last remaining piece on the 
+                board. However, you must be careful with the path you choose 
+                because your opponents are trying to kick you off the board. 
+                Kick them off first and you will be one step closer to winning.
+              </p>
+              <div class="shop">
+              <p>
+                <a href="https://www.amazon.com/Calliope-Tsuro-Family-Strategy-Board/dp/B002SQBB3O/ref=sr_1_1?keywords=Tsuro&qid=1639377074&sr=8-1">You can buy this game for $39.95 on Amazon.</a>
+              </p>
+              </div>
+            </div>
+            <a
+              href="https://www.youtube.com/watch?v=cxpQDmkdEQY"
+              target="blank"
+              class="ruleslink"
+            >
+              <p>YouTube Description</p>
+            </a>
+          </div>
         </div>
-
+<!--Among Us-->
         <div class="subject3-3">
-          <h2>Among Us - (Online)</h2>
-          <p>Among Us rules description – (YouTube link)</p>
+          <div class="mediacard">
+            <img src="images/amongus.png" alt="Among Us" class="cardimage" />
+            <img src="images/heart.webp" alt="Heart" class="heart" />
+            <div class="text">
+              <h2>Among Us - (Online)</h2>
+              <p>
+                Among us is a popular social deduction video game in which all 
+                the crewmates are on a mission to complete all of their tasks. 
+                However, there is an imposter among them that is trying to kill 
+                everyone before all the tasks are completed. Can you find the 
+                imposter and win the game, or will he find you first?
+              </p>
+              <div class="shop">
+              <p>
+                <a href="https://www.xbox.com/en-us/games/store/among-us/9ng07qjnk38j"> You can get this game for free on your phone or for $4.99 on the Microsoft Store. </a>
+              </p>
+              </div>
+            </div>
+            <a
+              href="https://www.youtube.com/watch?v=muqaBob6pfw"
+              target="blank"
+              class="ruleslink"
+            >
+              <p>YouTube Description</p>
+            </a>
+          </div>
         </div>
-
+<!--Gibberish Murder-->
         <div class="subject4-3">
-          <h2>I Can’t Do That - (Improv)</h2>
-          <p>I Can’t Do That rules description – (YouTube link)</p>
+          <div class="mediacard">
+            <img src="images/improv.jpg" alt="Improv" class="cardimage" />
+            <img src="images/heart.webp" alt="Heart" class="heart" />
+            <div class="text">
+              <h2>Gibberish Murder - (Improv)</h2>
+              <p>
+                This game is a classic improv game in which the people 
+                participating have lost the power of speech and can now only 
+                talk in gibberish. One of the participents is told by those 
+                watching who died in a murder, where the murder takes place, 
+                and what object was used.
+                </p>
+              <p class="shop">
+                You don't need to buy anything for this game.
+              </p>
+            </div>
+            <a
+              href="https://www.youtube.com/watch?v=pbDVSvmWCOE"
+              target="blank"
+              class="ruleslink"
+            >
+              <p>YouTube Description</p>
+            </a>
+          </div>
         </div>
+      </div>
+
+      <div class="subject2">
+        <h2>What if I don't see a game?</h2>
+        <p>
+          Do you not see one of your favorite games?
+          <a href="contact.html" title="Contact Info">Let us know</a> and we
+          will add the game so everyone can join in on the fun.
+        </p>
+      </div>
       </main>
 
       <footer>
