--- a/gamenight/gametype.html
+++ b/gamenight/gametype.html
@@ -7,7 +7,7 @@
     <title>Game Night</title>
     <meta
       name="description"
-      content="Game Night is about differnt games to play with friends and how to play"
+      content="This will describe what different games are with examples of the types of games"
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -27,37 +27,88 @@
       </header>
 
       <main>
-        <h1>Game Type</h1>
+        <h1>Game Night</h1>
+        <h2>Game Type</h2>
         <div class="heroimage">
-          <img src="images/justagame.jpeg" alt="Just A Game" />
+          <img src="images/dice.webp" alt="Dice" />
         </div>
 
+        <!--Outdoor Games-->
         <div class="subject1-2">
           <h2>Outdoor Games</h2>
           <p>
-            Description of outdoor games and examples of popular games to play.
+            Is the weater nice out today? Are you tired of sitting on the couch
+            looking a different screens? Outdoor games are perfect for nice
+            sunny days or warm nights. There are a lot of different types of
+            games that you can play out side if you have the space. These games
+            include but are not limited to:
+            <a href="gamerule.html" title="Game Rules">Tag</a>,
+            <a href="gamerule.html" title="Game Rules">Dodge Ball</a>,
+            <a href="gamerule.html" title="Game Rules">Basket Ball</a>,
+            <a href="gamerule.html" title="Game Rules">Frisbee</a>,
+            <a href="gamerule.html" title="Game Rules">Kubb</a>,
+            <a href="gamerule.html" title="Game Rules">and many more</a>.
           </p>
         </div>
 
+        <!--Card/Board Games-->
         <div class="subject2-2">
           <h2>Card/Board Games</h2>
           <p>
-            Description of card and board games and examples of popular games to
-            play.
+            So you want to play some fun games with your friends and family but
+            it is raining outside. What are you supposed to do now that you are
+            stuck inside? Board and card games are excellent games to play if
+            you are stuck inside or simpliy don't want to go outside. The
+            different possibilities for games to choose are endless. A few Game
+            Night favorites include but are not limited to:
+            <a href="gamerule.html" title="Game Rules">Tichu</a>,
+            <a href="gamerule.html" title="Game Rules">One Night Werewolf</a>,
+            <a href="gamerule.html" title="Game Rules">Salem</a>,
+            <a href="gamerule.html" title="Game Rules">Secert Hittler</a>,
+            <a href="gamerule.html" title="Game Rules">Tsuro</a>,
+            <a href="gamerule.html" title="Game Rules">and many more</a>.
           </p>
         </div>
 
+        <!--Online Games-->
         <div class="subject3-2">
           <h2>Online Games</h2>
           <p>
-            Description of online games and examples of popular games to play.
+            Imagine you want to have a game night with your friends but they
+            moved to a different state. How are you going to have a game night
+            with them now? Luckily for you, there are still games that you can
+            play with people that aren't able to be with you in person. Online
+            games are a great way to stay connected to your friends and family
+            when your situation prohibits you from meeting together. Some games
+            that can keep you together include but are not limited to:
+            <a href="gamerule.html" title="Game Rules">Halo</a>,
+            <a href="gamerule.html" title="Game Rules">Minecraft</a>,
+            <a href="gamerule.html" title="Game Rules">Mario Kart Tour</a>,
+            <a href="gamerule.html" title="Game Rules">JackBox Games</a>,
+            <a href="gamerule.html" title="Game Rules">Among Us</a>,
+            <a href="gamerule.html" title="Game Rules">and many more</a>.
           </p>
         </div>
 
+        <!--Improv Games-->
         <div class="subject4-2">
           <h2>Improv Games</h2>
           <p>
-            Description of improv games and examples of popular games to play.
+            Do you want to have fun but don't necessarily want to do as much as
+            the other people in your group? If so, improv games are the games
+            for you. Improv games are games that are generally played by actors
+            to help them come up with random things to do and say on the spot.
+            However, you don't need to be an actor to play the games or to enjoy
+            watching others play. Most of these games are best played when there
+            are at least four people playing the game and another group of at
+            least 3 people watching. Good examples of these games include but
+            are not limited to:
+            <a href="gamerule.html" title="Game Rules">Lie Detector</a>,
+            <a href="gamerule.html" title="Game Rules">Freeze Frame</a>,
+            <a href="gamerule.html" title="Game Rules">Late Again</a>,
+            <a href="gamerule.html" title="Game Rules">I Can't Do That</a>,
+            <a href="gamerule.html" title="Game Rules">Gibberish Murder</a>,
+            <a href="gamerule.html" title="Game Rules">and many more</a>.
           </p>
         </div>
       </main>
