--- a/gamenight/index.html
+++ b/gamenight/index.html
@@ -28,8 +28,9 @@
 
       <main>
         <h1>Game Night</h1>
+        <h2>Home</h2>
         <div class="heroimage">
-          <img src="images/justagame.jpeg" alt="Just A Game" />
+          <img src="images/dice.webp" alt="Dice" />
         </div>
 
         <div class="subject1">
@@ -46,8 +47,9 @@
         <div class="subject2">
           <h2>What if I don't see a game?</h2>
           <p>
-            Do you not see one of your favorite games? Let us know and we will
-            add the game so everyone can join in on the fun.
+            Do you not see one of your favorite games?
+            <a href="contact.html" title="Contact Info">Let us know</a> and we
+            will add the game so everyone can join in on the fun.
           </p>
         </div>
       </main>
