Add font family

--- a/gamenight/index.html
+++ b/gamenight/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Game Night is about differnt games to play with friends and how to play"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Acme&family=Archivo+Narrow&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
