--- a/gamenight/gametype.html
+++ b/gamenight/gametype.html
@@ -9,6 +9,12 @@
       name="description"
       content="This will describe what different games are with examples of the types of games"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Acme&family=Archivo+Narrow&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
